Revert "ヘッダーとフッター修正"

--- a/index.html
+++ b/index.html
@@ -20,20 +20,15 @@
       MobileMenuここまで -->
 
       <!-- ここからPCMenu -->
-      <div class="hidden lg:flex lg:justify-center pt-4 pb-4 border-b-2 border-gray-300">
-        <div class="w-720 flex justify-around">
-          <div>Home</div>
-          <div>Ranking</div>
-          <div>Categories</div>
-          <div>Writer</div>
-        </div>
-      </div>
-      <div class="hidden lg:flex lg:justify-center pt-4 pb-4">
+      <div class="hidden lg:flex lg:justify-center lg:mb-4">
         <div class="w-1080 flex justify-around">
+          <div>HOME</div>
+          <div>RANKING</div>
           <div>category1</div>
           <div>category2</div>
           <div>category3</div>
           <div>category4</div>
+          <div>category5</div>
         </div>
       </div>
       <!-- PCMenuここまで -->
@@ -558,20 +553,20 @@
       <!-- ここからMenu -->
       <div class="hidden lg:block pt-12 pl-8">
         <div class="text-lg font-medium">Menu</div>
-        <div class="text-md text-gray-400 mt-2">Home</div>
-        <div class="text-md text-gray-400 mt-2">Ranking</div>
-        <div class="text-md text-gray-400 mt-2">Categories</div>
-        <div class="text-md text-gray-400 mt-2">Writer</div>
+        <div class="text-md text-gray-400 mt-2">NEWS</div>
+        <div class="text-md text-gray-400 mt-2">RANKING</div>
       </div>
       <!-- Menuここまで -->
 
       <!-- ここからCategory -->
       <div class="hidden lg:block pt-12 pl-8">
-        <div class="text-lg font-medium">Categories</div>
+        <div class="text-lg font-medium">Category</div>
         <div class="text-md text-gray-400 mt-2">category1</div>
         <div class="text-md text-gray-400 mt-2">category2</div>
         <div class="text-md text-gray-400 mt-2">category3</div>
         <div class="text-md text-gray-400 mt-2">category4</div>
+        <div class="text-md text-gray-400 mt-2">category5</div>
+        <div class="text-md text-gray-400 mt-2">category6</div>
       </div>
       <!-- Categoryここまで -->
     </footer>
@@ -582,10 +577,8 @@
       <!-- ここからMobileMenu -->
       <div class="grid-span-1 pl-4">
         <div class="text-xl mb-4">Menu</div>
-        <div class="text-base text-gray-500 mb-2">Home</div>
-        <div class="text-base text-gray-500 mb-2">Rankig</div>
-        <div class="text-base text-gray-500 mb-2">Categories</div>
-        <div class="text-base text-gray-500 mb-2">Writer</div>
+        <div class="text-base text-gray-500 mb-2">HOME</div>
+        <div class="text-base text-gray-500 mb-2">RANKING</div>
       </div>
       <!-- MobileMenuここまで -->
       <!-- ここからMobileCategory -->
@@ -595,6 +588,7 @@
         <div class="text-base text-gray-500 mb-2">categoy2</div>
         <div class="text-base text-gray-500 mb-2">categoy3</div>
         <div class="text-base text-gray-500 mb-2">categoy4</div>
+        <div class="text-base text-gray-500 mb-2">categoy5</div>
       </div>
       <!-- MobileCategoryここまで -->
     </div>
