記事のサンプル完成

--- a/article.html
+++ b/article.html
@@ -30,6 +30,90 @@
     </header>
     <!-- /ヘッダー -->
 
+    <!-- 記事 -->
+    <div class="grid grid-cols-11">
+      <div class="col-start-2 col-end-8 pt-8">
+        <div class="text-xs text-gray-300 mb-16">Home > ライフスタイル > 瞑想・ヨガ</div>
+        <div class="flex justify-between">
+          <div class="text-xs text-gray-300 pl-4">2021.03.18</div>
+          <div class="flex mb-4">
+            <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+            <div class="text-xs">ハピラフMAGAZINE編集部</div>
+          </div>
+        </div>
+        <div class="text-4xl border-b-4 border-black pl-4 pb-2 mb-4">私の名品 #03 作家 羽田圭介「こだわりの道具に身体を縛られる」</div>
+        <div class="flex pl-4 mb-8">
+          <div class="h-8 w-8 bg-twitter bg-cover bg-center mr-4"></div>
+          <div class="h-8 w-8 bg-facebook bg-cover bg-center mr-4"></div>
+          <div class="h-8 w-8 bg-line bg-cover bg-center mr-4"></div>
+          <div class="h-8 w-8 bg-good bg-cover bg-center mr-4"></div>
+        </div>
+        <div class="px-4 mb-32">
+          <div class="h-96 bg-coffee bg-cover bg-center mb-16"></div>
+          <div class="mb-32">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            <br>
+            <br>
+            テキストテキストテキストテキストテキストテキストテキストテキスト
+            <br>
+            <br>
+            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+          </div>
+          <div class="text-2xl border-l-4 border-black pl-8 mb-16">書くことに専念できる「キングジム ポメラDM200」</div>
+          <div class="h-96 bg-flower bg-cover bg-center mb-16"></div>
+          <div class="mb-32">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+          <div class="text-2xl border-l-4 border-black pl-8 mb-16">原稿は必ず紙に ブラザー工業「モノクロレーザープリンター」</div>
+          <div class="h-96 bg-beach bg-cover bg-center mb-16"></div>
+          <div class="mb-32">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            <br>
+            <br>
+            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+          </div>
+          <div class="h-96 bg-avocado bg-cover bg-center mb-16"></div>
+          <div class="mb-32">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+          <div class="flex justify-center pl-4 mb-8">
+            <div class="h-8 w-8 bg-share bg-cover bg-center mr-4"></div>
+            <div class="h-8 w-8 bg-twitter bg-cover bg-center mr-4"></div>
+            <div class="h-8 w-8 bg-facebook bg-cover bg-center mr-4"></div>
+            <div class="h-8 w-8 bg-line bg-cover bg-center mr-4"></div>
+            <div class="h-8 w-8 bg-good bg-cover bg-center mr-4"></div>
+          </div>
+        </div>
+        <div class="text-4xl border-b-4 border-black mb-8">WRITER</div>
+        <div class="flex">
+          <div class="w-5/6">
+            <div class="font-bold mb-2">ハピラフMAGAZINE編集部</div>
+            <div>誰かの「好き」が、ほかの誰かの「好き」を応援するようなメディアになりたいです。</div>
+          </div>
+          <div class="h-24 w-24 bg-baby bg-cover bg-center"></div>
+        </div>
+        <div class="text-4xl border-b-4 border-black mb-8">RELATED ARTICLES</div>
+        <div class="divide-y">
+          <div class="flex py-4">
+            <div class="h-32 w-1/6 bg-flower bg-cover bg-center"></div>
+            <div class="w-5/6 ml-4">
+              <div class="text-smmb-2">テキストテキストテキストテキストテキスト</div>
+              <div class="text-xs text-gray-300">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+            </div>
+          </div>
+          <div class="flex py-4">
+            <div class="h-32 w-1/6 bg-flower bg-cover bg-center"></div>
+            <div class="w-5/6 ml-4">
+              <div class="text-smmb-2">テキストテキストテキストテキストテキスト</div>
+              <div class="text-xs text-gray-300">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+            </div>
+          </div>
+          <div class="flex py-4">
+            <div class="h-32 w-1/6 bg-flower bg-cover bg-center"></div>
+            <div class="w-5/6 ml-4">
+              <div class="text-smmb-2">テキストテキストテキストテキストテキスト</div>
+              <div class="text-xs text-gray-300">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /記事 -->
+
     <!-- フッター -->
     <footer>
       <div class="flex flex-col items-center border-double border-b-4 lg:border-none py-4 lg:py-16">
