メインコンテンツ以外のレスポンシブ対応

--- a/article.html
+++ b/article.html
@@ -9,16 +9,16 @@
   </head>
   <body>
     <!-- ヘッダー -->
-    <header class="shadow-lg">
+    <header class="border-b-2 sm:border-none sm:shadow-lg">
       <!-- ロゴ -->
-      <a href="/" class="flex flex-col items-center py-4 lg:p-0">
-        <div class="text-lg lg:text-xl font-bold tracking-widest">ハピラフ</div>
-        <div class="text-3xl lg:text-4xl font-black tracking-widest">MAGAZINE</div>
+      <a href="/" class="flex flex-col items-center py-4 sm:p-0">
+        <div class="text-lg sm:text-xl font-bold tracking-widest">ハピラフ</div>
+        <div class="text-3xl sm:text-4xl font-black tracking-widest">MAGAZINE</div>
       </a>
       <!-- /ロゴ -->
 
       <!-- メニュー -->
-      <div class="hidden lg:flex justify-center pt-4 pb-4">
+      <div class="hidden sm:flex justify-center pt-4 pb-4">
         <div class="w-7/12 flex justify-around text-xs">
           <a href="/category/コスメ">コスメ</a>
           <a href="/category/占い・恋愛">占い・恋愛</a>
@@ -31,7 +31,7 @@
     <!-- /ヘッダー -->
 
     <!-- メインコンテンツ -->
-    <div class="grid grid-cols-12">
+    <div class="grid grid-cols-12 mb-32">
       <div class="col-start-2 col-end-9 pt-8">
         <div class="text-xs text-gray-300 mb-16">Home > ライフスタイル > 瞑想・ヨガ</div>
         <div class="flex justify-between">
@@ -86,7 +86,7 @@
         <!-- ライター -->
         <div class="text-4xl border-b-4 border-black mb-8">WRITER</div>
         <div class="flex mb-20">
-          <div class="w-5/6">
+          <div class="w-5/6 pl-4">
             <div class="font-bold mb-2">ハピラフMAGAZINE編集部</div>
             <div>誰かの「好き」が、ほかの誰かの「好き」を応援するようなメディアになりたいです。</div>
           </div>
@@ -98,23 +98,23 @@
         <div class="text-4xl border-b-4 border-black mb-8">RELATED ARTICLES</div>
         <div class="divide-y">
           <div class="flex py-4">
-            <div class="h-32 w-1/6 bg-flower bg-cover bg-center"></div>
-            <div class="w-5/6 ml-4">
-              <div class="text-smmb-2">テキストテキストテキストテキストテキスト</div>
+            <div class="h-24 w-1/6 bg-flower bg-cover bg-center"></div>
+            <div class="w-5/6 py-2 ml-4">
+              <div class="text-sm mb-4">テキストテキストテキストテキストテキスト</div>
               <div class="text-xs text-gray-300">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
             </div>
           </div>
           <div class="flex py-4">
-            <div class="h-32 w-1/6 bg-flower bg-cover bg-center"></div>
-            <div class="w-5/6 ml-4">
-              <div class="text-smmb-2">テキストテキストテキストテキストテキスト</div>
+            <div class="h-24 w-1/6 bg-flower bg-cover bg-center"></div>
+            <div class="w-5/6 py-2 ml-4">
+              <div class="text-sm mb-4">テキストテキストテキストテキストテキスト</div>
               <div class="text-xs text-gray-300">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
             </div>
           </div>
           <div class="flex py-4">
-            <div class="h-32 w-1/6 bg-flower bg-cover bg-center"></div>
-            <div class="w-5/6 ml-4">
-              <div class="text-smmb-2">テキストテキストテキストテキストテキスト</div>
+            <div class="h-24 w-1/6 bg-flower bg-cover bg-center"></div>
+            <div class="w-5/6 py-2 ml-4">
+              <div class="mb-4">テキストテキストテキストテキストテキスト</div>
               <div class="text-xs text-gray-300">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
             </div>
           </div>
@@ -207,35 +207,35 @@
         </div>
         <!-- /ランキング -->
         <!-- カテゴリ -->
-        <div class="lg:h-12 lg:text-3xl lg:text-white lg:bg-black lg:mx-0 lg:pl-4 text-lg border-b-4 border-black font-bold mx-4 mb-8 py-2 pl-2">
+        <div class="sm:h-12 sm:text-3xl sm:text-white sm:bg-black sm:mx-0 sm:pl-4 text-lg border-b-4 border-black font-bold mx-4 mb-8 py-2 pl-2">
           CATEGORY
         </div>
-        <div class="flex flex-col ml-8 mb-4 lg:mb-8">
+        <div class="flex flex-col ml-8 mb-4 sm:mb-8">
           <a href="/category/コスメ" class="text-sm text-gray-500 font-semibold mb-2">コスメ</a>
           <a href="/" class="text-sm text-gray-400 mb-2 pl-4">イエベ</a>
           <a href="/" class="text-sm text-gray-400 mb-2 pl-4">ブルベ</a>
           <a href="/" class="text-sm text-gray-400 mb-2 pl-4">ポーチの中身</a>
         </div>
-        <div class="flex flex-col ml-8 mb-4 lg:mb-8">
+        <div class="flex flex-col ml-8 mb-4 sm:mb-8">
           <a href="/category/占い・恋愛" class="text-sm text-gray-500 font-semibold mb-2">占い・恋愛</a>
           <a href="/" class="text-sm text-gray-400 mb-2 pl-4">占い</a>
           <a href="/" class="text-sm text-gray-400 mb-2 pl-4">恋愛</a>
           <a href="/" class="text-sm text-gray-400 mb-2 pl-4">心理テスト</a>
         </div>
-        <div class="flex flex-col ml-8 mb-4 lg:mb-8">
+        <div class="flex flex-col ml-8 mb-4 sm:mb-8">
           <a href="/category/ファッション" class="text-sm text-gray-500 font-semibold mb-2">ファッション</a>
           <a href="/" class="text-sm text-gray-400 mb-2 pl-4">韓国アパレル</a>
           <a href="/" class="text-sm text-gray-400 mb-2 pl-4">20代向け</a>
           <a href="/" class="text-sm text-gray-400 mb-2 pl-4">30~40代向け</a>
         </div>
-        <div class="flex flex-col ml-8 mb-4 lg:mb-8">
+        <div class="flex flex-col ml-8 mb-4 sm:mb-8">
           <a href="/category/ライフスタイル" class="text-sm text-gray-500 font-semibold mb-2">ライフスタイル</a>
           <a href="/" class="text-sm text-gray-400 mb-2 pl-4">瞑想、ヨガ</a>
           <a href="/" class="text-sm text-gray-400 mb-2 pl-4">格安SIM</a>
           <a href="/" class="text-sm text-gray-400 mb-2 pl-4">ダイエット</a>
           <a href="/" class="text-sm text-gray-400 mb-2 pl-4">保険</a>
         </div>
-        <div class="flex flex-col ml-8 mb-4 lg:mb-8">
+        <div class="flex flex-col ml-8 mb-4 sm:mb-8">
           <a href="/category/ライター一覧" class="text-sm text-gray-500 font-semibold mb-2">アカウント一覧</a>
           <a href="/" class="text-sm text-gray-400 mb-2 pl-4">節約チャンネル</a>
           <a href="/" class="text-sm text-gray-400 mb-2 pl-4">スタディオンデマンド</a>
@@ -251,19 +251,27 @@
 
     <!-- フッター -->
     <footer>
-      <div class="flex flex-col items-center border-double border-b-4 lg:border-none py-4 lg:py-16">
-        <div class="text-md lg:text-xl font-bold tracking-widest">ハピラフ</div>
-        <div class="text-2xl lg:text-4xl font-black tracking-widest">MAGAZINE</div>
+      <div class="h-auto flex justify-center items-center bg-coffee bg-cover bg-center py-16 sm:py-32 px-4">
+        <div class="h-auto w-auto flex flex-col justify-around items-center bg-white bg-opacity-50 py-12 px-4">
+          <div class="text-center px-8 mb-8">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
+            テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+          </div>
+          <div class="h-10 text-white text-center bg-black py-2 px-12">アカウント一覧</div>
+        </div>
+      </div>
+      <div class="flex flex-col items-center border-double border-b-4 sm:border-none py-4 sm:py-16">
+        <div class="text-md sm:text-xl font-bold tracking-widest">ハピラフ</div>
+        <div class="text-2xl sm:text-4xl font-black tracking-widest">MAGAZINE</div>
       </div>
       <!-- PC版 -->
-      <div class="hidden lg:flex justify-center divide-x divide-black mb-12">
+      <div class="hidden sm:flex justify-center divide-x divide-black mb-12">
         <a href="/category/コスメ" class="px-4">コスメ</a>
         <a href="/category/占い・恋愛" class="px-4">占い・恋愛</a>
         <a href="/category/ファッション" class="px-4">ファッション</a>
         <a href="/category/ライフスタイル" class="px-4">ライフスタイル</a>
         <a href="/category/アカウント一覧" class="px-4">アカウント一覧</a>
       </div>
-      <div class="hidden lg:flex justify-center mb-16">
+      <div class="hidden sm:flex justify-center mb-16">
         <a class="px-4">ABOUT</a>
         <a class="px-4">WRITER</a>
         <a class="px-4">運営会社</a>
@@ -272,7 +280,7 @@
       <!-- /PC版 -->
 
       <!-- SP版 -->
-      <div class="grid grid-cols-2 pt-8 pb-4 lg:hidden">
+      <div class="grid grid-cols-2 pt-8 pb-4 sm:hidden">
         <div class="pl-8">
           <div class="mb-4">Pages</div>
           <div class="text-xs text-gray-400 mb-3">ABOUT</div>
