SP版ではサイドバーを隠す

--- a/article.html
+++ b/article.html
@@ -32,7 +32,7 @@
 
     <!-- メインコンテンツ -->
     <div class="grid grid-cols-12 mb-32">
-      <div class="col-start-2 col-end-9 pt-8">
+      <div class="col-start-2 col-end-9 pt-2 sm:pt-8">
         <div class="text-xs text-gray-300 mb-16">Home > ライフスタイル > 瞑想・ヨガ</div>
         <div class="flex justify-between">
           <div class="text-xs text-gray-300 pl-4">2021.03.18</div>
@@ -124,7 +124,7 @@
       <!-- /記事 -->
 
       <!-- サイドバー -->
-      <div class="col-start-10 col-end-13 pr-16">
+      <div class="hidden sm:block col-start-10 col-end-13 pr-16">
         <!-- 検索フォーム -->
         <div class="rounded-full border border-black mb-14">
           <form method="get" class="h-12 flex justify-center">
