記事情報上部レスポンシブ化

--- a/article.html
+++ b/article.html
@@ -31,16 +31,31 @@
     <!-- /ヘッダー -->
 
     <!-- メインコンテンツ -->
-    <div class="grid grid-cols-12 mb-32">
+    <div class="sm:grid sm:grid-cols-12 px-4 sm:p-0 mb-32">
       <div class="col-start-2 col-end-9 pt-2 sm:pt-8">
-        <div class="text-xs text-gray-300 mb-16">Home > ライフスタイル > 瞑想・ヨガ</div>
-        <div class="flex justify-between">
+        <div class="text-xs text-gray-300 mb-4 sm:mb-16">Home > ライフスタイル > 瞑想・ヨガ</div>
+        <!-- PC版 -->
+        <div class="hidden sm:flex justify-between">
           <div class="text-xs text-gray-300 pl-4">2021.03.18</div>
           <div class="flex mb-4">
             <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
             <div class="text-xs">ハピラフMAGAZINE編集部</div>
           </div>
         </div>
+        <!-- /PC版 -->
+
+        <!-- SP版 -->
+        <div class="sm:hidden mb-8">
+          <div class="flex justify-between items-center mb-2">
+            <div class="text-xs text-red-300 border border-black py-1 px-4">category</div>
+            <div class="flex">
+              <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+              <div class="text-xs">ハピラフMAGAZINE編集部</div>
+            </div>
+          </div>
+          <div class="text-xs text-gray-300">2021.03.18</div>
+        </div>
+        <!-- /SP版 -->
       </div>
 
       <!-- 記事 -->
